improvements & tweaks
-updates should only refresh affected widgets
-switched to onWidgetLoaded for initial layout building
-revised onScriptPostFired for handling only targeted widget updating
-reduced magic number usage
-refactored helper methods for readability